<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">La-nota</string>

    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="no_repetition">No repetition</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="create">Create</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="cant_be_empty">" can't be emty"</string>
    <string name="repeat_to_delete">Repeat to delete</string>
    <string name="everyday">Everyday</string>
    <string name="every_week">Every week</string>
    <string name="choose_own">Choose Own</string>
    <string name="repeat">Repeat</string>
    <string name="own_repeat">Repeat once in ... days</string>
    <string name="once_in_days">"once in "</string>
    <string name="dnia">" days"</string>
    <string name="dnei">" days"</string>
    <string name="field">This field</string>
    <string name="tasks_with_rep">Tasks with repetition</string>
</resources>
