<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_border">

    <EditText
        android:id="@+id/nametask"
        android:layout_width="321dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/purple_500"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#d9d9d9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065" />

    <EditText
        android:id="@+id/descr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:backgroundTint="@color/purple_500"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#d9d9d9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/nametask"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/nametask"
        app:layout_constraintTop_toBottomOf="@+id/nametask"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/create"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/taskholder"
        android:backgroundTint="@color/purple_500"
        android:text="@string/create"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/descr"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/delete"
        app:layout_constraintTop_toBottomOf="@+id/repetitionTV" />

    <Button
        android:id="@+id/delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:background="@drawable/taskholder"
        android:backgroundTint="@color/purple_500"


        android:text="@string/delete"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/repetitionTV"
        app:layout_constraintStart_toStartOf="@+id/descr"
        app:layout_constraintTop_toBottomOf="@+id/repetitionTV" />

    <TextView
        android:id="@+id/repetitionTV"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:ems="10"
        android:gravity="center"
        android:text="@string/no_repetition"
        android:textSize="20sp"
        app:drawableStartCompat="@drawable/ic_repeat_vector"
        app:layout_constraintEnd_toEndOf="@+id/descr"
        app:layout_constraintStart_toEndOf="@+id/timeTV"
        app:layout_constraintTop_toBottomOf="@+id/descr" />

    <TextView
        android:id="@+id/timeTV"
        android:layout_width="115dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="All day"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/create"
        app:layout_constraintStart_toStartOf="@+id/descr"
        app:layout_constraintTop_toBottomOf="@+id/descr" />


</androidx.constraintlayout.widget.ConstraintLayout>